# File-Extension-Fixer-Rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
