[package]
name = "file-extension-fixer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fixFileExt"
path = "./src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
indicatif = "0.17.9"
infer = { version = "0.16.0", default-features = false }
num-format = "0.4.4"
